# arcbox-desktop

./: Cargo.toml  Makefile
.cargo/: config.toml
arcbox-desktop-swift/arcbox-desktop-swift.xcodeproj/: project.pbxproj
arcbox-desktop-swift/arcbox-desktop-swift.xcodeproj/project.xcworkspace/xcuserdata/shuoma.xcuserdatad/: UserInterfaceState.xcuserstate
bundle/: AppIcon.icns  ArcBox.entitlements  Info.plist.template
src/: app.rs  assets.rs  main.rs  theme.rs  tokio_bridge.rs
src/components/: log_viewer.rs  mod.rs  status_badge.rs  text_input.rs
src/models/: container.rs  image.rs  machine.rs  mod.rs  network.rs  volume.rs
src/services/: daemon.rs  daemon_manager.rs  image_icon.rs  mod.rs
src/views/: container_detail.rs  containers.rs  images.rs  machine_detail.rs  machines.rs  mod.rs  networks.rs  new_container_dialog.rs  settings.rs  volumes.rs
