[package]
name = "arcbox-desktop"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-Proprietary"
repository = "https://github.com/arcboxd/arcbox-desktop"
publish = false

[package.metadata.arcbox]
tier = "enterprise"
commercial-use = "license-required"

[dependencies]
# GPUI core (locked to known working commit)
gpui = { git = "https://github.com/zed-industries/zed.git", package = "gpui", rev = "e8fbd5be" }

# GPUI-Tokio bridge for running tokio async code
gpui_tokio = { git = "https://github.com/zed-industries/zed.git", package = "gpui_tokio", rev = "e8fbd5be" }
util = { git = "https://github.com/zed-industries/zed.git", package = "util", rev = "e8fbd5be" }

# HTTP client for loading remote images
reqwest_client = { git = "https://github.com/zed-industries/zed.git", package = "reqwest_client", rev = "e8fbd5be" }

# Error handling
anyhow = "1"

# Docker image icons
dimicon = "0.0.1-beta.1"

# GPUI component library (optional, for advanced components)
# gpui-component = "0.4"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Directories
dirs = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
