[package]
name = "arcbox-desktop"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-Proprietary"
repository = "https://github.com/arcboxd/arcbox-desktop"
publish = false

[package.metadata.arcbox]
tier = "enterprise"
commercial-use = "license-required"

[dependencies]
# GPUI core
gpui = "0.2.2"
# GPUI component library for Input, Button, etc.
gpui-component = "0.5.0"

# HTTP client for remote image loading
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1"

# ArcBox core crates
arcbox-api = { path = "../arcbox/crates/arcbox-api" }
prost = "0.13"

# Docker image icons
dimicon = { path = "../dimicon" }

# gRPC
tonic = "0.12"
tower = "0.4"
hyper-util = "0.1"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Directories
dirs = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[package.metadata.bundle]
name = "ArcBox"
identifier = "com.aprilnea.arcbox"
icon = ["bundle/AppIcon.icns"]
copyright = "Copyright © 2026 AprilNEA LLC. All rights reserved."
category = "public.app-category.developer-tools"
osx_minimum_system_version = "12.0"
short_description = "ArcBox is a Docker management desktop application."

[package.metadata.winres]
OriginalFilename = "arcbox.exe"
LegalCopyright = "Copyright © 2026 AprilNEA LLC. All rights reserved."

[package.metadata.appimage]
icon = "bundle/arcbox.png"
assets = ["assets/arcbox.desktop"]